@@ -1,3 +1,6 @@
+12/8/17
+ - better message for plugin check
+
 12/6/17
  - protecting against DL failure
 
